# mse_autmobros

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: clippy.yml
beaglebone/testing/: Cargo.toml  README.md
beaglebone/testing/src/: librobotcontrol.rs  main.rs
eeros/: COMPILE_EEROS.md  Dockerfile  README.md
eeros/class/: CMakeLists.txt  README.md
eeros/class/config/: HwConfigBBBlue.json
eeros/class/include/: MainSequence.hpp  MyRobotSafetyProperties.hpp  RobotControlSystem.hpp  RobotSafetyProperties.hpp
eeros/class/include/customBlocks/: MotorBlocksController.hpp  MotorController.hpp  ServoController.hpp
eeros/class/include/customSequences/: MoveForwardSequence.hpp
eeros/class/src/: ControlSystem.cpp  MyRobotSafetyProperties.cpp  RobotControlSystem.cpp  RobotSafetyProperties.cpp  main.cpp
eeros/playing/: CMakeLists.txt
eeros/playing/config/: HwConfigBBBlue.json
eeros/playing/include/: ControlSystem.hpp  MainSequence.hpp  MyRobotSafetyProperties.hpp  RobotSafetyProperties.hpp
eeros/playing/include/robot/: motor.hpp  path_planner.hpp  robot.hpp  wheel.hpp
eeros/playing/src/: ControlSystem.cpp  RobotSafetyProperties.cpp  main.cpp
pathfinder/: Cargo.toml  README.md
pathfinder/.github/workflows/: rust.yml
pathfinder/src/: a_star.rs  grassfire.rs  main.rs  rrt.rs  tree.rs
